# pg_cpp_project

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md  run
cmake/: Libraries.cmake
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: application.cpp  gl_utils.cpp  main  main.cpp
src/headers/: application.hpp  face.hpp  gl_utils.hpp  group.hpp  manager.hpp  mesh.hpp
